fix: limit the range of chatbot